Fix title bar button text.

--- a/Sources/ThemeKit/ThemeKit.strings
+++ b/Sources/ThemeKit/ThemeKit.strings
@@ -8,6 +8,6 @@
 
 "color.tint.label" = "Tint";
 "color.alternatetint.label" = "Alternate Tint";
-"color.title.label" = "Title";
 "color.titlebar.label" = "Title Bar";
+"color.titlebarbutton.label" = "Title Bar Button";
 "color.titlebarbackground.label" = "Title Bar Background";
