--- a/Sources/ThemeKit/ThemeKit.strings
+++ b/Sources/ThemeKit/ThemeKit.strings
@@ -8,6 +8,6 @@
 
 "color.tint.label" = "Tint";
 "color.alternatetint.label" = "Alternate Tint";
-"color.titlebar.label" = "Title Bar";
-"color.titlebarbutton.label" = "Title Bar Button";
+"color.titlebartext.label" = "Title Bar Text";
+"color.titlebarbuttonlabel.label" = "Title Bar Button Label";
 "color.titlebarbackground.label" = "Title Bar Background";
